# P1---DNN-using-NumPy

./: .gitignore  README.md  pyproject.toml
apps/: ShowCase.py  training.py
src/p1_dnn/: activations.py  layers.py  models.py  trainer.py  utils.py
